<resources>
    <string name="app_name">Research Buddy</string>
    <string name="welcome_text">Welcome !!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="select_role">Select role</string>
    <string name="researcher">Researcher</string>
    <string name="participant">Participant</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_msg_first_name_empty">First name is empty</string>
    <string name="error_msg_last_name_empty">Last name is empty</string>
    <string name="error_msg_email_empty">Email is empty</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_msg_password_constraints">Password must have Minimum 6 and at least one uppercase letter, one lowercase letter, one number and one special character:</string>
    <string name="error_msg_password_not_match">Password should match</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? register here!</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="questionnaires">Questionaires</string>
    <string name="observations">Observations</string>
    <string name="logout">Logout</string>
    <string name="create_a_form">Create a Form</string>
    <string name="view_draft_forms">View draft forms</string>
    <string name="call_interviews">Interviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_page">Project name</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="untitled_form">Untitled Form</string>
    <string name="untitled_question">Untitled Question</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="checkboxes">Checkboxes</string>
    <string name="text">Text</string>
    <string name="type_the_question">Type the question</string>
    <string name="delete">Delete</string>
    <string name="enter_possible_answers_separating">Enter possible answers separating ;</string>
    <string name="answers">Answers</string>
    <string name="add_image">Add image</string>
    <string name="add_video">Add video</string>
    <string name="add_audio">Add audio</string>
    <string name="new_call_recording">New call recording</string>
    <string name="view_call_recordings">View call recordings</string>
    <string name="form_title">Form Title</string>
    <string name="phone_number">Phone number</string>
    <string name="make_interview_call_title">Make an interview call</string>
    <string name="image1">
        <a href="https://firebasestorage.googleapis.com/v0/b/research-buddy-db416.appspot.com/o/images%2F2022_04_11_07_27_49?alt=media&amp;token=a94732b7-23bc-4a88-aa44-ce010dad0906">
        2022_04_11_07_27_49.jpeg</a></string>
    <string name="image2">
        <a href="https://firebasestorage.googleapis.com/v0/b/research-buddy-db416.appspot.com/o/images%2F2022_04_11_07_29_05?alt=media&amp;token=ebb6071b-a27a-49ca-aca3-ec877dded533">
        2022_04_11_07_29_05.jpeg</a></string>
    <string name="image3">
        <a href="https://firebasestorage.googleapis.com/v0/b/research-buddy-db416.appspot.com/o/images%2F2022_04_11_07_30_13?alt=media&amp;token=f0e673f4-a13b-4522-a2c7-8d03dcd51d05">
        2022_04_11_07_30_13.jpeg</a></string>
    <string name="video1">
        <a href="https://firebasestorage.googleapis.com/v0/b/research-buddy-db416.appspot.com/o/videos%2F2022_04_11_07_35_06?alt=media&amp;token=936e1fe0-60e7-4113-9fef-cc5765eea44c">
        2022_04_11_07_35_06.mp4
        </a></string>
</resources>