<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp">

    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_text_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_the_question"
            android:text="@string/untitled_question" />

        <EditText
            android:id="@+id/edt_text_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_text_question"
            android:hint="@string/enter_possible_answers_separating"
            android:text="@string/answers" />

        <TextView
            android:id="@+id/txt_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_text_answer"
            android:text="@string/enter_possible_answers_separating" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_instruction">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left">

                <RadioGroup
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/text" />

                    <RadioButton
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multiple_choice" />

                    <RadioButton
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkboxes" />
                </RadioGroup>

            </RelativeLayout>

<!--            <ImageButton-->
<!--                android:id="@+id/btn_delete"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="bottom|right"-->
<!--                android:contentDescription="@string/delete"-->
<!--                android:src="@drawable/ic_delete"-->
<!--                android:tooltipText="@string/delete"-->
<!--                android:onClick="onDeleteFormItem"/>-->

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        android:tooltipText="@string/delete"
        android:onClick="onDeleteFormItem"/>
</androidx.cardview.widget.CardView>