<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/ic_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/formFields"
        android:layout_below="@+id/logo"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp">

        <EditText
            android:id="@+id/editTxtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/editTxtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtFirstName"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/editTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtLastName"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_role"
            android:id="@+id/txtSelectRole"
            android:layout_below="@+id/editTxtEmail"
            android:layout_marginTop="20dp"/>

        <RadioGroup
            android:id="@+id/checkList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSelectRole"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radioButtonResearcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/researcher"
                    android:layout_toEndOf="@+id/txtSelectRole"
                    android:layout_marginRight="5dp"
                    />

                <RadioButton
                    android:id="@+id/radioButtonParticipant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/radioButtonResearcher"
                    android:text="@string/participant" />
            </LinearLayout>



        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkList"
            android:text="Register"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>