<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_add_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_image"
        android:gravity="left|center_vertical"
        android:padding="15dp"
        android:text="@string/add_image" />

    <Button
        android:id="@+id/btn_add_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add_image"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_video"
        android:gravity="left|center_vertical"
        android:padding="15dp"
        android:text="@string/add_video" />

    <Button
        android:id="@+id/btn_add_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add_video"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_audio"
        android:gravity="left|center_vertical"
        android:padding="15dp"
        android:text="@string/add_audio" />

</RelativeLayout>